--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
   <body>
       <h3>Copy Demo</h3>
 
-        <px-clipboard copy-from="#helloCopy"><input type="text" id="helloCopy" value="hello World Copy"/></px-clipboard>
+        <px-clipboard copy-from=".helloCopy"><input type="text" id="helloCopy" class="helloCopy" value="hello World Copy"/></px-clipboard>
 
       <h3>Cut Demo</h3>
 
