downgraded polymer to 1.5

--- a/px-clipboard.html
+++ b/px-clipboard.html
@@ -33,7 +33,9 @@ Or, with no input/textarea:
   <link rel="import" type="css" href="css/px-clipboard.css"/>
   <template>
     <content></content>
-    <iron-icon icon="polymer-font-awesome:fa-clipboard" id="copy"></iron-icon>
+    <div class="iron">
+      <iron-icon icon="polymer-font-awesome:fa-clipboard" id="copy"></iron-icon>
+    </div>
   </template>
 </dom-module>
 
