added image to readme, removed watch, added view on github

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="import" href="px-clipboard.html"/>
   <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <link rel="import" href="../px-demo-snippet/px-demo-snippet.html">
-  <link rel="import" href="../polymer-font-awesome/polymer-font-awesome.html">
+  <link rel="import" href="../px-polymer-font-awesome/polymer-font-awesome.html" />
   <!-- Requires Webcomponents.js polyfill is provided by the page for browsers that don't support html imports -->
 
   </head>
@@ -30,6 +30,7 @@
     </style>
     <!-- discription -->
     <div class="hero u-p++ text--shadow">
+      <a class="actionable flex flex--right flex--middle" href="https://github.com/PredixDev/px-clipboard" target="_blank"><iron-icon class="menu__open" icon="fa:fa-github"></iron-icon>View on Github</a>
   		<h1 class="delta">px-clipboard</h1>
   		<p>
   			px-clipboard is used to quickly and easily copy text onto the user's clipboard.
@@ -38,7 +39,6 @@
   			<img class="u-mr--" src="https://img.shields.io/travis/PredixDev/px-clipboard.svg?style=flat-square" alt="Travis"/>
   			<img class="u-mr--" src="https://img.shields.io/bower/v/px-clipboard.svg?style=flat-square" alt="Bower"/>
   			<img class="u-mr--" src="https://img.shields.io/github/issues-raw/PredixDev/px-clipboard.svg?style=flat-square" alt="Issues"/>
-  			<img class="u-mr--" src="https://img.shields.io/github/watchers/PredixDev/px-clipboard.svg?style=social&label=Watch"/>
   		</div>
   	</div>
     <br />
