--- a/px-clipboard.html
+++ b/px-clipboard.html
@@ -29,8 +29,13 @@ Or, with no input/textarea:
 @homepage index.html
 @demo demo.html
 -->
+
+-->
+
+<link rel="import" href="css/px-clipboard-styles.html">
 <dom-module id="px-clipboard">
-  <link rel="import" type="css" href="css/px-clipboard.css"/>
+  <style include="px-clipboard-styles"></style>
+  <style include="px-theme-styles"></style>
   <template>
     <div class="flex">
       <div class="flex__item"><content></content></div>
