--- a/px-clipboard.html
+++ b/px-clipboard.html
@@ -38,7 +38,7 @@ Or, with no input/textarea:
     <div class="flex">
       <div class="flex__item"><content></content></div>
       <div class="iron float--right">
-        <iron-icon icon="fa:fa-clipboard" id="copy"></iron-icon>
+        <iron-icon title="copy" icon="fa:fa-clipboard" id="copy"></iron-icon>
       </div>
     </div>
   </template>
