--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                   <div>
                     <px-demo-snippet
                       element-properties={{item}}
-                      element-name="px-clipboard">
+                      element-name="px-clipboard"
+                      scripts-includes='["https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.13/dist/clipboard.min.js"]'>
                     </px-demo-snippet>
                   </div>
                 </div>
