fixed demo context switching

--- a/demo/index.html
+++ b/demo/index.html
@@ -108,6 +108,7 @@
                 showProps: ['copyFrom'],
                 copyFrom:  ".grabContent",
                 dataClipboardAction: "copy",
+                dataClipboardText: '',
                 lightDomContent: '<input type="text" class="grabContent text-input" value="Copy Input Value" />'
               },
               {
@@ -115,6 +116,7 @@
                 configName: "Cut",
                 copyFrom: ".grabContent",
                 dataClipboardAction: "cut",
+                dataClipboardText: '',
                 lightDomContent: '<input type="text" class="grabContent text-input" value="Cut Input Value" />'
               },
               {
