update icon name

--- a/px-clipboard.html
+++ b/px-clipboard.html
@@ -214,7 +214,7 @@ Custom property | Description | Default
       var ironIcon = Polymer.dom(this.root).querySelector('iron-icon'),
           copiedIcon = Polymer.dom(this.root).querySelector('.iron');
 
-      ironIcon.icon ='px:confirm';
+      ironIcon.icon ='px:check-circle';
       copiedIcon.classList.add('copiedIconGreen', 'fadeOutCopied');
 
       if (this._showCopiedText) {
